--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400, 300);
+
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #067eb2;
+  overflow-y: auto;
+  overflow-x: hidden;
+  font-family: "Roboto", sans-serif;
+  background: url("https://images.assetsdelivery.com/compings_v2/brum/brum0803/brum080300105.jpg")
+    no-repeat center center fixed;
+  background-size: cover;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
